--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
     "nuxt": "^2.0.0",
+    "vue-click-outside": "^1.1.0",
     "vue-material-design-icons": "^4.6.0"
   },
   "devDependencies": {
