--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "@nuxtjs/axios": "^5.10.3",
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
+    "lodash": "^4.17.15",
     "nuxt": "^2.0.0",
+    "vue-advanced-cropper": "^0.16.2",
     "vue-click-outside": "^1.1.0",
+    "vue-core-image-upload": "^2.4.11",
+    "vue-infinite-scroll": "^2.0.2",
     "vue-material-design-icons": "^4.6.0"
   },
   "devDependencies": {
