--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/onesignal": "^3.0.0-beta.16",
     "@nuxtjs/pwa": "^3.0.0-0",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.19",
     "nuxt": "^2.0.0",
     "vue-advanced-cropper": "^0.16.4",
     "vue-click-outside": "^1.1.0",
     "vue-core-image-upload": "^2.4.11",
     "vue-infinite-scroll": "^2.0.2",
-    "vue-material-design-icons": "^4.6.0"
+    "vue-material-design-icons": "^4.6.0",
+    "vue-select": "^3.10.7"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^1.0.0",
