--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/onesignal": "^3.0.0-beta.16",
     "@nuxtjs/pwa": "^3.0.0-0",
+    "compressorjs": "^1.0.6",
     "lodash": "^4.17.19",
     "nuxt": "^2.0.0",
     "vue-advanced-cropper": "^0.16.4",
