--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "vue-core-image-upload": "^2.4.11",
     "vue-infinite-scroll": "^2.0.2",
     "vue-material-design-icons": "^4.6.0",
-    "vue-select": "^3.10.7"
+    "vue-select": "^3.10.7",
+    "vuelidate": "^0.7.5"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^1.0.0",
