--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/onesignal": "^3.0.0-beta.16",
     "@nuxtjs/pwa": "^3.0.0-0",
     "compressorjs": "^1.0.6",
+    "dayjs": "^1.8.33",
     "lodash": "^4.17.19",
     "nuxt": "^2.0.0",
     "vue-advanced-cropper": "^0.16.4",
