added invites and fixed bugs

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sozial_test",
   "version": "1.0.0",
-  "description": "Das soziale Newtzwerk für Schüler",
+  "description": "Das beste Soziale Netzwerk.",
   "author": "Dimitri Franov",
   "private": true,
   "scripts": {
