--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-infinite-scroll": "^2.0.2",
     "vue-material-design-icons": "^4.6.0",
     "vue-select": "^3.10.7",
+    "vue2-touch-events": "^2.3.2",
     "vuelidate": "^0.7.5"
   },
   "devDependencies": {
