--- a/package.json
+++ b/package.json
@@ -13,31 +13,31 @@
   },
   "dependencies": {
     "@nuxtjs/auth": "^4.9.1",
-    "@nuxtjs/axios": "^5.10.3",
+    "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/onesignal": "^3.0.0-beta.16",
-    "@nuxtjs/pwa": "^3.0.0-0",
+    "@nuxtjs/pwa": "^3.0.2",
     "compressorjs": "^1.0.6",
-    "dayjs": "^1.8.33",
-    "lodash": "^4.17.19",
-    "nuxt": "^2.0.0",
-    "vue-advanced-cropper": "^0.16.4",
+    "dayjs": "^1.8.36",
+    "lodash": "^4.17.20",
+    "nuxt": "^2.14.6",
+    "vue-advanced-cropper": "^0.16.10",
     "vue-click-outside": "^1.1.0",
-    "vue-core-image-upload": "^2.4.11",
+    "vue-core-image-upload": "^2.4.12",
     "vue-infinite-scroll": "^2.0.2",
-    "vue-material-design-icons": "^4.6.0",
-    "vue-select": "^3.10.7",
+    "vue-material-design-icons": "^4.9.0",
+    "vue-select": "^3.10.8",
     "vue2-touch-events": "^2.3.2",
     "vuelidate": "^0.7.5"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^1.0.0",
     "@nuxtjs/eslint-config": "^2.0.0",
     "@nuxtjs/eslint-module": "^1.0.0",
+    "@nuxtjs/tailwindcss": "^1.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^6.1.0",
-    "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-nuxt": "^1.0.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^1.19.1"
   }
 }
