new backend domain and name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sozial_test",
+  "name": "tschau",
   "version": "1.0.0",
   "description": "Das beste Soziale Netzwerk.",
   "author": "Dimitri Franov",
