added sitemap and robots.txt

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@nuxtjs/google-gtag": "^1.0.4",
     "@nuxtjs/onesignal": "^3.0.0-beta.16",
     "@nuxtjs/pwa": "^3.0.2",
+    "@nuxtjs/robots": "^2.4.2",
+    "@nuxtjs/sitemap": "^2.4.0",
     "compressorjs": "^1.0.6",
     "dayjs": "^1.8.36",
     "lodash": "^4.17.20",
