--- a/package.json
+++ b/package.json
@@ -13,24 +13,24 @@
   },
   "dependencies": {
     "@nuxtjs/auth": "^4.9.1",
-    "@nuxtjs/axios": "^5.12.2",
+    "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/google-gtag": "^1.0.4",
     "@nuxtjs/onesignal": "^3.0.0-beta.16",
-    "@nuxtjs/pwa": "^3.0.2",
-    "@nuxtjs/robots": "^2.4.2",
+    "@nuxtjs/pwa": "^3.3.5",
+    "@nuxtjs/robots": "^2.5.0",
     "@nuxtjs/sitemap": "^2.4.0",
-    "compressorjs": "^1.0.6",
-    "dayjs": "^1.8.36",
-    "lodash": "^4.17.20",
-    "nuxt": "^2.14.6",
+    "compressorjs": "^1.0.7",
+    "dayjs": "^1.10.4",
+    "lodash": "^4.17.21",
+    "nuxt": "^2.15.4",
     "vue-advanced-cropper": "^0.16.10",
     "vue-click-outside": "^1.1.0",
-    "vue-core-image-upload": "^2.4.12",
+    "vue-core-image-upload": "^2.4.13",
     "vue-infinite-scroll": "^2.0.2",
-    "vue-material-design-icons": "^4.9.0",
-    "vue-select": "^3.10.8",
+    "vue-material-design-icons": "^4.11.0",
+    "vue-select": "^3.11.2",
     "vue2-touch-events": "^2.3.2",
-    "vuelidate": "^0.7.5"
+    "vuelidate": "^0.7.6"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^2.0.0",
@@ -38,9 +38,15 @@
     "@nuxtjs/tailwindcss": "^1.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-nuxt": "^1.0.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-prettier": "^3.4.0",
     "prettier": "^1.19.1"
+  },
+  "config": {
+    "nuxt": {
+      "host": "0.0.0.0",
+      "port": "3000"
+    }
   }
 }
