--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/onesignal": "^3.0.0-beta.16",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/robots": "^2.5.0",
+    "@nuxtjs/sentry": "^5.0.3",
     "@nuxtjs/sitemap": "^2.4.0",
     "compressorjs": "^1.0.7",
     "dayjs": "^1.10.4",
